# scaffoldr

./: .gitignore  README.md  pyproject.toml
docs/: index.md
docs/explanation/: eld-cross-boundary-analysis.md  reading-the-outputs.md  toon-format.md  why-structural-analysis.md
docs/how-to/: feed-to-ai-assistant.md  investigate-coupling.md  regenerate-after-changes.md
docs/reference/: class-hierarchy.md  coupling-density.md  dependencies-md.md  entry-points.md  output-files.md  structure-full-json.md  structure-full-toon.md  structure-summary.md
docs/tutorials/: first-analysis.md
src/scaffoldr/: __init__.py  __main__.py
src/scaffoldr/cli/: __init__.py  output.py  parser.py
src/scaffoldr/core/: __init__.py  formatters.py  graphs.py  types.py
src/scaffoldr/langs/: __init__.py
src/scaffoldr/langs/python/: __init__.py  discovery.py  parsing.py
