[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scaffoldr"
version = "0.1.0"
description = "Structural analysis for codebases — compressed maps for LLM context windows"
requires-python = ">=3.11"
license = "MIT"

[project.scripts]
scaffoldr = "scaffoldr.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scaffoldr"]
